tests/error/negative_array2.gw
// [contains] ArrayOutofBounds
int i[2][2];
<<< i[1][-1] >>>;
<<< -1 >>>;
